# neuralhydrology

./: pyproject.toml  setup.py
docs/source/: conf.py
examples/01-Introduction/: Introduction.ipynb
examples/02-Adding-Models/: adding-gru.ipynb
examples/03-Adding-Datasets/: adding-camels-cl.ipynb
examples/04-Multi-Timescale/: multi-timescale.ipynb
examples/05-Inspecting-LSTMs/: inspecting-lstms.ipynb
examples/06-Finetuning/: finetuning.ipynb
neuralhydrology/: nh_run.py  nh_run_scheduler.py
neuralhydrology/datasetzoo/: __init__.py  basedataset.py  cabra.py  cabra_ms.py  camelsaus.py  camelsbr.py  camelscl.py  camelsgb.py  camelsus.py  caravan.py  genericdataset.py  hourlycamelsus.py  lamah.py  template.py
neuralhydrology/datautils/: climateindices.py  pet.py  utils.py
neuralhydrology/evaluation/: __init__.py  evaluate.py  metrics.py  plots.py  signatures.py  tester.py  utils.py
neuralhydrology/modelzoo/: __init__.py  arlstm.py  baseconceptualmodel.py  basemodel.py  cudalstm.py  customlstm.py  ealstm.py  embcudalstm.py  fc.py  gru.py  handoff_forecast_lstm.py  head.py  hybridmodel.py  inputlayer.py  mamba.py  mclstm.py  mtslstm.py  multihead_forecast_lstm.py  odelstm.py  sequential_forecast_lstm.py  shm.py  stacked_forecast_lstm.py  template.py  transformer.py  xlstm.py
neuralhydrology/training/: __init__.py  basetrainer.py  logger.py  loss.py  regularization.py  train.py
neuralhydrology/utils/: config.py  configutils.py  dummy_lr_scheduler.py  errors.py  logging_utils.py  nh_results_ensemble.py  ratingcurve.py  samplingutils.py
test/: conftest.py  test_config_runs.py  test_custom_lstm.py  test_datautils.py  test_mclstm.py
