[project]
name = "neuralhydrology"
version = "1.11.0"
description = "Library for training deep learning models with environmental focus"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "ruamel.yaml>=0.18.6",
    "torch>=2.5.1",
    "scipy>=1.10.1",
    "tensorboard>=2.14.0",
    "tqdm>=4.67.1",
    "xarray>=2023.1.0",
]


[project.scripts]
nh-run = "neuralhydrology.nh_run:_main"
nh-schedule-runs = "neuralhydrology.nh_run_scheduler:_main"
nh-results-ensemble = "neuralhydrology.utils.nh_results_ensemble:_main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"